[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/UI.gd" type="Script" id=1]

[node name="UI" type="Node2D"]
script = ExtResource( 1 )

[node name="GenAlgStats" type="Control" parent="."]
margin_left = 950.0
margin_top = 9.0
margin_right = 1355.0
margin_bottom = 759.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GenAlgStats"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.313726 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="GenAlgStats"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 440.0
margin_right = -10.0
margin_bottom = -10.0001
color = Color( 0.513726, 0.513726, 0.513726, 0.196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D" type="Line2D" parent="GenAlgStats"]
position = Vector2( 10, 740 )
width = 2.0
default_color = Color( 0, 0.588235, 0.0235294, 1 )
begin_cap_mode = 2
end_cap_mode = 2

[node name="bestScore" type="Label" parent="GenAlgStats"]
margin_left = 10.0
margin_top = 410.0
margin_right = 86.0001
margin_bottom = 424.0
text = "Best Score: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sims" type="Label" parent="GenAlgStats"]
margin_left = 10.0
margin_top = 390.0
margin_right = 86.0001
margin_bottom = 404.0
text = "Sims nÂº : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time" type="Label" parent="GenAlgStats"]
margin_left = 200.0
margin_top = 390.0
margin_right = 276.0
margin_bottom = 404.0
text = "Time : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="manualscore" type="Label" parent="GenAlgStats"]
margin_left = 200.0
margin_top = 410.0
margin_right = 297.0
margin_bottom = 424.0
text = "Manual Score :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="GenAlgStats"]
modulate = Color( 1, 1, 1, 0.470588 )
margin_left = 10.0
margin_top = 40.0
margin_right = 395.0
margin_bottom = 370.0
auto_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="loadbutton" type="Button" parent="."]
margin_left = 1070.0
margin_top = 9.0
margin_right = 1120.0
margin_bottom = 34.0
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="savebutton" type="Button" parent="."]
margin_left = 1125.0
margin_top = 9.0
margin_right = 1175.0
margin_bottom = 34.0
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="competebutton" type="Button" parent="."]
margin_left = 1275.0
margin_top = 9.0
margin_right = 1355.0
margin_bottom = 39.0
text = "Compete"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="viewbestbutton" type="Button" parent="."]
margin_left = 1190.0
margin_top = 9.0
margin_right = 1270.0
margin_bottom = 39.0
text = "View Best"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="autolearnbutton" type="Button" parent="."]
margin_left = 950.0
margin_top = 9.0
margin_right = 1065.0
margin_bottom = 39.0
text = "Auto Learn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 10.0
margin_top = 9.0
margin_right = 400.0
margin_bottom = 36.0
text = "Press \"space\" to switch between: Manual Drive / Free Cam"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Label"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inputs" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="i0" type="Label" parent="inputs"]
margin_top = 80.0
margin_right = 80.0
margin_bottom = 107.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="inputs/i0"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="i1" type="Label" parent="inputs"]
margin_top = 110.0
margin_right = 80.0
margin_bottom = 137.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="inputs/i1"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="i2" type="Label" parent="inputs"]
margin_top = 140.0
margin_right = 80.0
margin_bottom = 167.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="inputs/i2"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="i3" type="Label" parent="inputs"]
margin_top = 170.0
margin_right = 80.0
margin_bottom = 197.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="inputs/i3"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="i4" type="Label" parent="inputs"]
margin_top = 200.0
margin_right = 80.0
margin_bottom = 227.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="inputs/i4"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="i5" type="Label" parent="inputs"]
margin_top = 230.0
margin_right = 80.0
margin_bottom = 257.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="inputs/i5"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="i6" type="Label" parent="inputs"]
margin_top = 260.0
margin_right = 80.0
margin_bottom = 287.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="inputs/i6"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="i7" type="Label" parent="inputs"]
margin_top = 290.0
margin_right = 80.0
margin_bottom = 317.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="inputs/i7"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="i8" type="Label" parent="inputs"]
margin_top = 320.0
margin_right = 80.0
margin_bottom = 347.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="inputs/i8"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="net" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="c10" type="Label" parent="net"]
margin_left = 150.0
margin_top = 130.0
margin_right = 230.0
margin_bottom = 157.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="net/c10"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="c11" type="Label" parent="net"]
margin_left = 150.0
margin_top = 160.0
margin_right = 230.0
margin_bottom = 187.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="net/c11"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="c12" type="Label" parent="net"]
margin_left = 150.0
margin_top = 190.0
margin_right = 230.0
margin_bottom = 217.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="net/c12"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="c13" type="Label" parent="net"]
margin_left = 150.0
margin_top = 220.0
margin_right = 230.0
margin_bottom = 247.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="net/c13"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="c14" type="Label" parent="net"]
margin_left = 150.0
margin_top = 250.0
margin_right = 230.0
margin_bottom = 277.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="net/c14"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="c20" type="Label" parent="net"]
margin_left = 270.0
margin_top = 160.0
margin_right = 350.0
margin_bottom = 187.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="net/c20"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="c21" type="Label" parent="net"]
margin_left = 270.0
margin_top = 190.0
margin_right = 350.0
margin_bottom = 217.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="net/c21"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="c22" type="Label" parent="net"]
margin_left = 270.0
margin_top = 220.0
margin_right = 350.0
margin_bottom = 247.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="net/c22"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="o0" type="Label" parent="net"]
margin_left = 380.0
margin_top = 175.0
margin_right = 460.0
margin_bottom = 202.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="net/o0"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="o1" type="Label" parent="net"]
margin_left = 380.0
margin_top = 210.0
margin_right = 460.0
margin_bottom = 237.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="net/o1"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lines" type="Control" parent="net"]
margin_right = 40.0
margin_bottom = 40.0

[node name="scores" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="best" type="Label" parent="scores"]
margin_top = 400.0
margin_right = 100.0
margin_bottom = 427.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="scores/best"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="current" type="Label" parent="scores"]
margin_top = 430.0
margin_right = 100.0
margin_bottom = 457.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="scores/current"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="savemenu" type="Control" parent="."]
anchor_right = 1.0
margin_right = 1366.0
margin_bottom = 768.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="savemenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="ColorRect2" type="ColorRect" parent="savemenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -250.0
margin_right = 300.0
margin_bottom = 250.0
color = Color( 0, 0, 0, 0.784314 )

[node name="cancelbutton" type="Button" parent="savemenu"]
margin_left = 695.0
margin_top = 550.0
margin_right = 935.0
margin_bottom = 600.0
text = "CANCEL"

[node name="finalsavebutton" type="Button" parent="savemenu"]
margin_left = 430.0
margin_top = 550.0
margin_right = 670.0
margin_bottom = 600.0
text = "SAVE"

[node name="Label" type="Label" parent="savemenu"]
margin_left = 430.0
margin_top = 470.0
margin_right = 530.0
margin_bottom = 500.0
text = "File name:"
valign = 1

[node name="savelabel" type="Label" parent="savemenu"]
margin_left = 586.508
margin_top = 148.404
margin_right = 767.508
margin_bottom = 178.404
text = "Save Menu"
align = 1
valign = 1

[node name="filename" type="TextEdit" parent="savemenu"]
margin_left = 430.0
margin_top = 500.0
margin_right = 935.0
margin_bottom = 530.0
text = "bestAI.mem"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="filelist" type="ItemList" parent="savemenu"]
margin_left = 430.0
margin_top = 190.0
margin_right = 935.0
margin_bottom = 460.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="loadmenu" type="Control" parent="."]
anchor_right = 1.0
margin_right = 1366.0
margin_bottom = 768.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="loadmenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="ColorRect2" type="ColorRect" parent="loadmenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -250.0
margin_right = 300.0
margin_bottom = 250.0
color = Color( 0, 0, 0, 0.784314 )

[node name="cancelbutton" type="Button" parent="loadmenu"]
margin_left = 695.0
margin_top = 550.0
margin_right = 935.0
margin_bottom = 600.0
text = "CANCEL"

[node name="finalloadbutton" type="Button" parent="loadmenu"]
margin_left = 430.0
margin_top = 550.0
margin_right = 670.0
margin_bottom = 600.0
text = "LOAD"

[node name="Label" type="Label" parent="loadmenu"]
margin_left = 430.0
margin_top = 470.0
margin_right = 530.0
margin_bottom = 500.0
text = "File name:"
valign = 1

[node name="loadlabel" type="Label" parent="loadmenu"]
margin_left = 586.508
margin_top = 148.404
margin_right = 767.508
margin_bottom = 178.404
text = "Load Menu"
align = 1
valign = 1

[node name="filename2" type="TextEdit" parent="loadmenu"]
margin_left = 430.0
margin_top = 500.0
margin_right = 935.0
margin_bottom = 530.0
readonly = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="filelist2" type="ItemList" parent="loadmenu"]
margin_left = 430.0
margin_top = 190.0
margin_right = 935.0
margin_bottom = 460.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="loadbutton" to="." method="_on_loadbutton_pressed"]
[connection signal="pressed" from="savebutton" to="." method="_on_savebutton_pressed"]
[connection signal="pressed" from="competebutton" to="." method="_on_competebutton_pressed"]
[connection signal="pressed" from="viewbestbutton" to="." method="_on_viewbestbutton_pressed"]
[connection signal="pressed" from="autolearnbutton" to="." method="_on_autolearnbutton_pressed"]
[connection signal="pressed" from="savemenu/cancelbutton" to="." method="_on_cancelbutton_pressed"]
[connection signal="pressed" from="savemenu/finalsavebutton" to="." method="_on_finalsavebutton_pressed"]
[connection signal="item_selected" from="savemenu/filelist" to="." method="_on_filelist_item_selected"]
[connection signal="pressed" from="loadmenu/cancelbutton" to="." method="_on_cancelbutton_pressed"]
[connection signal="pressed" from="loadmenu/finalloadbutton" to="." method="_on_finalloadbutton_pressed"]
[connection signal="item_selected" from="loadmenu/filelist2" to="." method="_on_filelist2_item_selected"]
